<resources>
    <string name="app_name">1000 books</string>
    <string name="your_name">your name</string>
    <string name="your_city">your city</string>
    <string name="your_phone">your phone number</string>
    <string name="empty_field">field cannot be blank</string>
    <string name="image_book">book\'s cover</string>
    <string name="no_data">No book</string>
    <string name="add_success">Adding item success</string>
    <string name="update_success">Edit item success</string>
    <string name="delete_success">Delete item success</string>
    <string name="upload_success">Upload into server success</string>
    <string name="at_least_200">At least 200 characters</string>
    <string name="btn_ok">OK</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_update_confirm">Cancel your update</string>
    <string name="delete_confirm">Delete your book</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="rating">rating</string>
    <string name="your_picture">your picture</string>
    <string name="your_regnumber">your register number</string>
    <string name="your_id">id</string>
    <string name="detail">detail</string>
    <string name="upload">upload</string>
    <string name="search">Search</string>
    <string name="keyword">keyword</string>
    <string name="collapse">collapse</string>
    <string name="expand">expand</string>
    <string name="filter_local">Display all books</string>
    <string name="filter_uploaded">Display uploaded books</string>
    <string name="menu_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="call">Make phone call</string>
    <string name="password">your password</string>
    <string name="your_password">your password</string>
    <string name="reader">Reader</string>
    <string name="pref_display_uploaded">Show uploaded books only</string>
    <string name="pref_location">Your location</string>
    <string name="pref_phone">Your phone number</string>
    <string name="pref_cat_profile">profile</string>
    <string name="signin">Sign in</string>
    <string name="your_email">Your email</string>
    <string name="register">register</string>
    <string name="email_constraint">must be email address</string>
    <string name="gplus">share on google plus</string>
    <string name="show_uploaded_summary">only display the books that have been shared to the server</string>
    <string name="pref_search_include_your_book">search include your book</string>
    <string name="show_search_include_summary">display search result include your book\'s review</string>
    <string-array name="rating_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
