<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pref_display_uploaded"
        android:title="@string/pref_display_uploaded"
        android:summary="@string/show_uploaded_summary"/>

    <PreferenceCategory
        android:title="@string/pref_cat_profile">
    <EditTextPreference
        android:defaultValue="Default value"
        android:key="@string/pref_location"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_location" />
    <EditTextPreference
        android:defaultValue="Default value"
        android:key="@string/pref_phone"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_phone" />
    </PreferenceCategory>
</PreferenceScreen>