<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh_white"
        android:title="@string/refresh"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_add_white"
        android:title="@string/add"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_local"
        android:icon="@drawable/ic_sd_storage_white"
        android:title="@string/filter_local"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/search"
        app:showAsAction="never"/>
    <!--<item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />-->
</menu>